fix(navbar): mobile alignment; insert links

--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ video {
   max-width: 100%;
 }
 
+.box-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 section {
   overflow: hidden;
   height: 100dvh;
@@ -27,6 +33,8 @@ nav {
   position: sticky;
   top: 0px;
   width: 100%;
+
+  margin-bottom: 30px; /* nav-links overflows */
 }
 a {
   color: inherit;
@@ -61,21 +69,8 @@ nav > div {
   flex-direction: column;
   align-items: center;
 }
-
-nav > div > div {
+nav .box-wrap .section-bg {
   position: absolute;
-  top: 88%;
-  right: 50%;
-  transform: translate(50%, -88%);
-}
-
-nav > svg {
-  /* z-index: -1 */
-  width: 70%;
-  position: absolute;
-  top: 50%;
-  right: 50%;
-  transform: translate(50%, -50%);
 }
 
 section .container {
@@ -206,12 +201,6 @@ section .container {
   font-size: 26.154px;
   font-weight: 600;
   letter-spacing: 0.262px;
-}
-
-.box-wrap {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 #raffle .raffle-text {
